--- a/administration/authorization.html
+++ b/administration/authorization.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
-        <li class="current"><a href="authorization.html">Chapter 10: Authorization</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="authentication.html">Chapter 9: Authentication</a></li>
-        <li class="next"><a href="ssl.html">Chapter 11: SSL</a></li>
+        <li class="current"><a href="authorization.html">Authorization</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="authentication.html">Authentication</a></li>
+        <li class="next"><a href="ssl.html">SSL</a></li>
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">Authorization</h1>
 <div id="TOC"
 ><ul
@@ -111,7 +111,7 @@
 >Please read over this document for information on how to define it, and how to grant access for certain actions to certain resources:</p
 ><ul
 ><li
-  ><a href="../aclpolicy-v10.html"
+  ><a href="../manpages/man5/aclpolicy-v10.html"
     >aclpolicy-v10(5)</a
     ></li
   ></ul
@@ -177,7 +177,7 @@ by:
   >Specific Resources and Resource Types</a
   ></h3
 ><p
->As described in the <a href="../aclpolicy-v10.html"
+>As described in the <a href="../manpages/man5/aclpolicy-v10.html"
   >aclpolicy-v10(5)</a
   > definition, access is granted or denied to specific &quot;resources&quot;. Resources can take two forms:</p
 ><ul
@@ -864,16 +864,22 @@ by:
   >aclpolicy changes do not require a restart.</li
   ></ul
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
-        <li class="current"><a href="authorization.html">Chapter 10: Authorization</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="authentication.html">Chapter 9: Authentication</a></li>
-        <li class="next"><a href="ssl.html">Chapter 11: SSL</a></li>
+        <li class="current"><a href="authorization.html">Authorization</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="authentication.html">Authentication</a></li>
+        <li class="next"><a href="ssl.html">SSL</a></li>
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
