--- a/manual/plugins.html
+++ b/manual/plugins.html
@@ -10,23 +10,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
         <li class="current"><a href="plugins.html">Plugins</a></li>
-        <li class="toc"><a href="index.html">Rundeck User Manual</a></li>
+        <li class="toc"><a href="index.html">User Manual</a></li>
         <li class="prev"><a href="rundeck-by-example.html">Rundeck by Example</a></li>
         
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">Plugins</h1>
 <div id="TOC"
 ><ul
@@ -1735,7 +1735,7 @@ resources.source.2.format=resourceyaml
     ></dt
   ><dd
   ><p
-    >Supports the Resource XML document format: <a href="../resource-v13.html"
+    >Supports the Resource XML document format: <a href="../manpages/man5/resource-v13.html"
       >resource-v13(5) XML</a
       >.</p
     ><p
@@ -1759,7 +1759,7 @@ resources.source.2.format=resourceyaml
     ></dt
   ><dd
   ><p
-    >Supports the Resource YAML document format: <a href="../resource-yaml-v13.html"
+    >Supports the Resource YAML document format: <a href="../manpages/man5/resource-yaml-v13.html"
       >resource-v13(5) YAML</a
       >.</p
     ><p
@@ -2486,16 +2486,22 @@ plugin.script-copy.default.remote-filepath: ${node.destdir}/${file-copy.filename
   >Developer Guide - Plugin Development</a
   > chapter.</p
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
         <li class="current"><a href="plugins.html">Plugins</a></li>
-        <li class="toc"><a href="index.html">Rundeck User Manual</a></li>
+        <li class="toc"><a href="index.html">User Manual</a></li>
         <li class="prev"><a href="rundeck-by-example.html">Rundeck by Example</a></li>
         
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
