--- a/administration/configuration.html
+++ b/administration/configuration.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
-        <li class="current"><a href="configuration.html">Chapter 3: Configuration</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="startup-and-shutdown.html">Chapter 2: Startup and Shutdown</a></li>
-        <li class="next"><a href="node-resource-sources.html">Chapter 4: Node Resource Sources</a></li>
+        <li class="current"><a href="configuration.html">Configuration</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="startup-and-shutdown.html">Startup and Shutdown</a></li>
+        <li class="next"><a href="node-resource-sources.html">Node Resource Sources</a></li>
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">Configuration</h1>
 <div id="TOC"
 ><ul
@@ -642,16 +642,22 @@ grails.mail.default.from=deployer@domain.com
   >Node Execution Plugins</a
   >.</p
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
-        <li class="current"><a href="configuration.html">Chapter 3: Configuration</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="startup-and-shutdown.html">Chapter 2: Startup and Shutdown</a></li>
-        <li class="next"><a href="node-resource-sources.html">Chapter 4: Node Resource Sources</a></li>
+        <li class="current"><a href="configuration.html">Configuration</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="startup-and-shutdown.html">Startup and Shutdown</a></li>
+        <li class="next"><a href="node-resource-sources.html">Node Resource Sources</a></li>
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
