--- a/administration/gui-customization.html
+++ b/administration/gui-customization.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
-        <li class="current"><a href="gui-customization.html">Chapter 12: GUI Customization</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="ssl.html">Chapter 11: SSL</a></li>
-        <li class="next"><a href="scaling-rundeck.html">Chapter 13: Scaling Rundeck</a></li>
+        <li class="current"><a href="gui-customization.html">GUI Customization</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="ssl.html">SSL</a></li>
+        <li class="next"><a href="scaling-rundeck.html">Scaling Rundeck</a></li>
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">GUI Customization</h1>
 <p
 >You can modify some display features of the Rundeck GUI by setting these properties in the <a href="configuration.html#rundeck-config.properties"
@@ -125,16 +125,22 @@
     ></tbody
   ></table
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
-        <li class="current"><a href="gui-customization.html">Chapter 12: GUI Customization</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="ssl.html">Chapter 11: SSL</a></li>
-        <li class="next"><a href="scaling-rundeck.html">Chapter 13: Scaling Rundeck</a></li>
+        <li class="current"><a href="gui-customization.html">GUI Customization</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="ssl.html">SSL</a></li>
+        <li class="next"><a href="scaling-rundeck.html">Scaling Rundeck</a></li>
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
