--- a/administration/ssh.html
+++ b/administration/ssh.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
-        <li class="current"><a href="ssh.html">Chapter 8: SSH</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="relational-database.html">Chapter 7: Relational Database</a></li>
-        <li class="next"><a href="authentication.html">Chapter 9: Authentication</a></li>
+        <li class="current"><a href="ssh.html">SSH</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="relational-database.html">Relational Database</a></li>
+        <li class="next"><a href="authentication.html">Authentication</a></li>
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">SSH</h1>
 <div id="TOC"
 ><ul
@@ -191,16 +191,22 @@ drwx------   2 raj  staff    68 Nov 22 18:19 .ssh
   >RD_</code
   > prefixed variables to provide open access to Rundeck generated environment variables.</p
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
-        <li class="current"><a href="ssh.html">Chapter 8: SSH</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="relational-database.html">Chapter 7: Relational Database</a></li>
-        <li class="next"><a href="authentication.html">Chapter 9: Authentication</a></li>
+        <li class="current"><a href="ssh.html">SSH</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="relational-database.html">Relational Database</a></li>
+        <li class="next"><a href="authentication.html">Authentication</a></li>
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
