--- a/administration/ssl.html
+++ b/administration/ssl.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
-        <li class="current"><a href="ssl.html">Chapter 11: SSL</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="authorization.html">Chapter 10: Authorization</a></li>
-        <li class="next"><a href="gui-customization.html">Chapter 12: GUI Customization</a></li>
+        <li class="current"><a href="ssl.html">SSL</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="authorization.html">Authorization</a></li>
+        <li class="next"><a href="gui-customization.html">GUI Customization</a></li>
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">SSL</h1>
 <div id="TOC"
 ><ul
@@ -235,16 +235,22 @@
 </code
   ></pre
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
-        <li class="current"><a href="ssl.html">Chapter 11: SSL</a></li>
-        <li class="toc"><a href="index.html">Rundeck Administration Guide</a></li>
-        <li class="prev"><a href="authorization.html">Chapter 10: Authorization</a></li>
-        <li class="next"><a href="gui-customization.html">Chapter 12: GUI Customization</a></li>
+        <li class="current"><a href="ssl.html">SSL</a></li>
+        <li class="toc"><a href="index.html">Administration Guide</a></li>
+        <li class="prev"><a href="authorization.html">Authorization</a></li>
+        <li class="next"><a href="gui-customization.html">GUI Customization</a></li>
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
