--- a/manpages/man1/rd-queue.html
+++ b/manpages/man1/rd-queue.html
@@ -7,16 +7,27 @@
   <meta name="author" content="Greg Schueler" />
   <meta name="author" content="Alex Honor" />
   <meta name="date" content="July 7, 2011" />
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="stylesheet" href="../../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
+    
+        <li><a href="../index.html">Manpages</a></li>
     </ul>
 </nav>
-</header>
+
+<nav class="page top">
+    <ul>
+        <li class="current"><a href="rd-queue.html">rd-queue(1) | Version 1.4.1</a></li>
+        <li class="toc"><a href="index.html">Man1</a></li>
+        <li class="prev"><a href="rd-project.html">rd-project(1) | Version 1.4.1</a></li>
+        <li class="next"><a href="rd-setup.html">rd-setup(1) | Version 1.4.1</a></li>
+    </ul>
+</nav>
 <div id="docbody">
 <h1 class="title">rd-queue(1) | Version 1.4.1</h1>
 <div id="TOC"
@@ -178,6 +189,23 @@ rd-queue kill: success. [160] Job status: killed
   >.</p
 >
 </div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
+    
+        <li><a href="../index.html">Manpages</a></li>
+    </ul>
+</nav>
+
+<nav class="page bottom">
+    <ul>
+        <li class="current"><a href="rd-queue.html">rd-queue(1) | Version 1.4.1</a></li>
+        <li class="toc"><a href="index.html">Man1</a></li>
+        <li class="prev"><a href="rd-project.html">rd-project(1) | Version 1.4.1</a></li>
+        <li class="next"><a href="rd-setup.html">rd-setup(1) | Version 1.4.1</a></li>
+    </ul>
+</nav>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
