--- a/manual/jobs.html
+++ b/manual/jobs.html
@@ -10,23 +10,23 @@
   <link rel="stylesheet" href="../style.css" type="text/css" />
 </head>
 <body>
-<header>
-<nav>
+
+
+<nav class="breadcrumb top">
     <ul>
-        <li><a class="toppage" href="../index.html">Rundeck Documentation 1.4.1</a></li>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
-</header>
-<div id="docbody">
 
 <nav class="page top">
     <ul>
         <li class="current"><a href="jobs.html">Jobs</a></li>
-        <li class="toc"><a href="index.html">Rundeck User Manual</a></li>
+        <li class="toc"><a href="index.html">User Manual</a></li>
         <li class="prev"><a href="rundeck-basics.html">Rundeck Basics</a></li>
         <li class="next"><a href="job-workflows.html">Job Workflows</a></li>
     </ul>
 </nav>
+<div id="docbody">
 <h1 class="title">Jobs</h1>
 <div id="TOC"
 ><ul
@@ -290,7 +290,7 @@
 ><p
 >Jobs can be run from the shell or from the graphical console.</p
 ><p
->From the command line, use the <a href="../run.html"
+>From the command line, use the <a href="../manpages/man1/run.html"
   >run</a
   > shell tool. Here's an example that starts a hypothetical job named &quot;restart&quot; belonging in the &quot;apps/web&quot; Job group in project &quot;myproject&quot;:</p
 ><pre
@@ -802,7 +802,7 @@ Job execution started:
 ><p
 >The Job will terminate with a &quot;Killed&quot; completion status.</p
 ><p
->See also: <a href="../rd-queue.html"
+>See also: <a href="../manpages/man1/rd-queue.html"
   >rd-queue</a
   >.</p
 ><h2 id="deleting-jobs"
@@ -883,16 +883,16 @@ Job execution started:
 >The XML and YAML document formats are described here:</p
 ><ul
 ><li
-  >XML: <a href="../job-v20.html"
+  >XML: <a href="../manpages/man5/job-v20.html"
     >job-v20(5)</a
     ></li
   ><li
-  >YAML: <a href="../job-yaml-v12.html"
+  >YAML: <a href="../manpages/man5/job-yaml-v12.html"
     >job-yaml-v12(5)</a
     ></li
   ></ul
 ><p
->Consult the <a href="../rd-jobs.html"
+>Consult the <a href="../manpages/man1/rd-jobs.html"
   >rd-jobs(1)</a
   > manual page for additional command usage.</p
 ><h2 id="importing-job-definitions"
@@ -940,16 +940,22 @@ Job execution started:
 ><p
 >Next, we'll cover how to create multi-step procedures using Job Workflows.</p
 >
+</div>
+
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
+    </ul>
+</nav>
 
 <nav class="page bottom">
     <ul>
         <li class="current"><a href="jobs.html">Jobs</a></li>
-        <li class="toc"><a href="index.html">Rundeck User Manual</a></li>
+        <li class="toc"><a href="index.html">User Manual</a></li>
         <li class="prev"><a href="rundeck-basics.html">Rundeck Basics</a></li>
         <li class="next"><a href="job-workflows.html">Job Workflows</a></li>
     </ul>
 </nav>
-</div>
 <footer class="copy">
 
 <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Rundeck Documentation</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://dtosolutions.com" property="cc:attributionName" rel="cc:attributionURL">DTO Solutions</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
