--- a/manpages/man1/rd-setup.html
+++ b/manpages/man1/rd-setup.html
@@ -15,14 +15,14 @@
     <ul>
         <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
     
-        <li><a href="../index.html">Manpages</a></li>
+        <li><a href="../index.html">Man Pages</a></li>
     </ul>
 </nav>
 
 <nav class="page top">
     <ul>
         <li class="current"><a href="rd-setup.html">rd-setup(1) | Version 1.4.1</a></li>
-        <li class="toc"><a href="index.html">Man1</a></li>
+        <li class="toc"><a href="index.html">Commands | Man(1)</a></li>
         <li class="prev"><a href="rd-queue.html">rd-queue(1) | Version 1.4.1</a></li>
         <li class="next"><a href="run.html">run(1) | Version 1.4.1</a></li>
     </ul>
@@ -169,14 +169,14 @@
     <ul>
         <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
     
-        <li><a href="../index.html">Manpages</a></li>
+        <li><a href="../index.html">Man Pages</a></li>
     </ul>
 </nav>
 
 <nav class="page bottom">
     <ul>
         <li class="current"><a href="rd-setup.html">rd-setup(1) | Version 1.4.1</a></li>
-        <li class="toc"><a href="index.html">Man1</a></li>
+        <li class="toc"><a href="index.html">Commands | Man(1)</a></li>
         <li class="prev"><a href="rd-queue.html">rd-queue(1) | Version 1.4.1</a></li>
         <li class="next"><a href="run.html">run(1) | Version 1.4.1</a></li>
     </ul>
