--- a/manpages/man5/job-v20.html
+++ b/manpages/man5/job-v20.html
@@ -15,14 +15,14 @@
     <ul>
         <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
     
-        <li><a href="../index.html">Manpages</a></li>
+        <li><a href="../index.html">Man Pages</a></li>
     </ul>
 </nav>
 
 <nav class="page top">
     <ul>
         <li class="current"><a href="job-v20.html">JOB-V20(5) Rundeck User Manuals | Version 2.0</a></li>
-        <li class="toc"><a href="index.html">Man5</a></li>
+        <li class="toc"><a href="index.html">Formats | Man(5)</a></li>
         <li class="prev"><a href="aclpolicy-v10.html">ACLPOLICY(5) Rundeck User Manuals | Version 1.4</a></li>
         <li class="next"><a href="job-yaml-v12.html">JOB-YAML-V12(5) Rundeck User Manuals | Version 1.2</a></li>
     </ul>
@@ -1509,14 +1509,14 @@ exit 2 ]&gt;&lt;/script&gt;
     <ul>
         <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
     
-        <li><a href="../index.html">Manpages</a></li>
+        <li><a href="../index.html">Man Pages</a></li>
     </ul>
 </nav>
 
 <nav class="page bottom">
     <ul>
         <li class="current"><a href="job-v20.html">JOB-V20(5) Rundeck User Manuals | Version 2.0</a></li>
-        <li class="toc"><a href="index.html">Man5</a></li>
+        <li class="toc"><a href="index.html">Formats | Man(5)</a></li>
         <li class="prev"><a href="aclpolicy-v10.html">ACLPOLICY(5) Rundeck User Manuals | Version 1.4</a></li>
         <li class="next"><a href="job-yaml-v12.html">JOB-YAML-V12(5) Rundeck User Manuals | Version 1.2</a></li>
     </ul>
