--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     ></li
   ><li
   ><a href="manpages/index.html"
-    >Manpages</a
+    >Man Pages</a
     ></li
   ><li
   ><a href="manual/index.html"
