--- a/manpages/man1/rd-queue.html
+++ b/manpages/man1/rd-queue.html
@@ -16,14 +16,14 @@
     <ul>
         <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
     
-        <li><a href="../index.html">Manpages</a></li>
+        <li><a href="../index.html">Man Pages</a></li>
     </ul>
 </nav>
 
 <nav class="page top">
     <ul>
         <li class="current"><a href="rd-queue.html">rd-queue(1) | Version 1.4.1</a></li>
-        <li class="toc"><a href="index.html">Man1</a></li>
+        <li class="toc"><a href="index.html">Commands | Man(1)</a></li>
         <li class="prev"><a href="rd-project.html">rd-project(1) | Version 1.4.1</a></li>
         <li class="next"><a href="rd-setup.html">rd-setup(1) | Version 1.4.1</a></li>
     </ul>
@@ -194,14 +194,14 @@ rd-queue kill: success. [160] Job status: killed
     <ul>
         <li><a href="../../index.html">Rundeck Documentation (1.4.1)</a></li>
     
-        <li><a href="../index.html">Manpages</a></li>
+        <li><a href="../index.html">Man Pages</a></li>
     </ul>
 </nav>
 
 <nav class="page bottom">
     <ul>
         <li class="current"><a href="rd-queue.html">rd-queue(1) | Version 1.4.1</a></li>
-        <li class="toc"><a href="index.html">Man1</a></li>
+        <li class="toc"><a href="index.html">Commands | Man(1)</a></li>
         <li class="prev"><a href="rd-project.html">rd-project(1) | Version 1.4.1</a></li>
         <li class="next"><a href="rd-setup.html">rd-setup(1) | Version 1.4.1</a></li>
     </ul>
