--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
 <div id="docbody">
 <h1 class="title">Rundeck Documentation (1.4.1)</h1>
 <p
->Rundeck project site: <a href="http://rundeck.org"
+>If you are new to Rundeck, start with the <a href="manual/index.html"
+  >User Manual</a
+  >.</p
+><p
+>More information about Rundeck at: <a href="http://rundeck.org"
   >rundeck.org</a
-  ></p
+  >.</p
 ><h2 id="sections"
 >Sections</h2
 ><ol style="list-style-type: decimal;"
@@ -35,6 +39,10 @@
   ><li
   ><a href="api/index.html"
     >API Reference | Version 3</a
+    ></li
+  ><li
+  ><a href="developer/index.html"
+    >Developer Guide</a
     ></li
   ><li
   ><a href="manpages/index.html"
