--- a/manual/rundeck-by-example.html
+++ b/manual/rundeck-by-example.html
@@ -621,9 +621,9 @@ Found 3 jobs:
 ><p
 >Access to running or modifying Jobs is managed in an access control policy defined using the aclpolicy document format (<a href="../manpages/man5/aclpolicy-v10.html"
   >aclpolicy-v10(5)</a
-  >). This file contains a number of policy elements that describe what user group is allowed to perform which actions. The <a href="getting-started.html#authorization"
+  >). This file contains a number of policy elements that describe what user group is allowed to perform which actions. The <a href="../administration/authorization.html"
   >Authorization</a
-  > section of the Administration chapter covers this in detail.</p
+  > Chapter of the Administration Guide covers this in detail.</p
 ><p
 >The administrator wants to use the aclpolicy to define two levels of access. The first level, has limited privilege and allows for just running jobs. The second level, is administrative and can modify job definitions.</p
 ><p
@@ -680,7 +680,7 @@ Found 3 jobs:
   ></h2
 ><p
 >See <a href="../administration/node-resource-sources.html#resource-model-source"
-  >Chapter 9 - Resource Model Source</a
+  >Administration - Node Resource Sources - Resource Model Source</a
   >.</p
 ><h2 id="resource-editor-examples"
 ><a href="#TOC"
@@ -688,7 +688,7 @@ Found 3 jobs:
   ></h2
 ><p
 >See <a href="../administration/node-resource-sources.html#resource-editor"
-  >Chapter 9 - Resource Editor</a
+  >Administration - Node Resource Sources - Resource Editor</a
   >.</p
 ><h2 id="option-model-provider-examples"
 ><a href="#TOC"
@@ -696,16 +696,10 @@ Found 3 jobs:
   ></h2
 ><p
 >See <a href="job-options.html#option-model-provider"
-  >Chapter 9 - Option Model Provider</a
+  >Job Options - Option Model Provider</a
   >.</p
 >
 </div>
-
-<nav class="breadcrumb bottom">
-    <ul>
-        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
-    </ul>
-</nav>
 
 <nav class="page bottom">
     <ul>
@@ -713,6 +707,11 @@ Found 3 jobs:
         <li class="toc"><a href="index.html">User Manual</a></li>
         <li class="prev"><a href="job-options.html">Job Options</a></li>
         <li class="next"><a href="plugins.html">Plugins</a></li>
+    </ul>
+</nav>
+<nav class="breadcrumb bottom">
+    <ul>
+        <li><a href="../index.html">Rundeck Documentation (1.4.1)</a></li>
     </ul>
 </nav>
 <footer class="copy">
